<resources>
    <string name="app_name">Stanrz</string>
    <string name="default_notification_channel_id">1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_amount">Enter coin amount to exchange</string>
    <string name="withdraw_coins">Redeem Coins</string>
    <string name="you">You</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="manage_vip_subscription">Manage FAN Subscription</string>
    <string name="view_all"><u>See More</u></string>
    <string name="stanrz_wallet">Stanrz Wallet</string>
    <string name="join">Join FAN Membership</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="permission_denied_boo">Permission Denied</string>
    <string name="your_date_of_birth">Your date of birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="exchange">Exchange</string>
    <string name="exchange_rate_1_coin_1_superlike"> 1 Coin : 1 Superlike</string>
    <string name="radeem_coins">Redeem coins</string>
    <string name="enter_coin_amount_to_redeem">Enter coin amount to redeem</string>
    <string name="redeem_rate_100_coins_1"> 100 Coins : $1</string>
    <string name="withdraw">Withdraw</string>
    <string name="cash_nearning">Cash \nEarning</string>
    <string name="join_1">Join</string>
    <string name="edit">Edit</string>
    <string name="edit_vip_mem">Edit FAN Membership</string>
    <string name="enter_first">Enter Name</string>
    <string name="enter_last">Enter User Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="enter_month">Enter Month</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_pass">Please enter password.</string>
    <string name="please_enter_con_pass">Please enter confirm password.</string>
    <string name="please_enter_mobile_number">Please enter mobile number.</string>
    <string name="pass_dont_match">Please enter password.</string>
    <string name="pass_and_confirm_pass_not_macthed">Password and confirm password is not matched.</string>
    <string name="please_wait">Please wait...</string>
    <string name="msg_noInternet">Internet Connection Not Available</string>
    <string name="all_permissions">Please allow all permissions.</string>
    <string name="on_error">On error</string>
    <string name="please_enter_com_otp">Please Enter Otp.</string>
    <string name="care">We sent 6 digit code to your phone</string>
    <string name="verify_your_n_account">Verify your\n account</string>
    <string name="sttings">Settings</string>
    <string name="email">Email</string>
    <string name="your_email_address">Your email address</string>
    <string name="terms_and_condition">terms and condition</string>
    <string name="accept">Accept</string>
    <string name="done">done</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_mismatched">Wrong old password.</string>
    <string name="please_enter_old_pass">Please enter old password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_mismatched">Please make sure your password match.</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="your_new_password">Your New Password</string>
    <string name="change_cover_photo">Change Cover Photo</string>
    <string name="change_cover">Change Cover Photo</string>
    <string name="follow">Follow</string>
    <string name="chat">Chat</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="likes">Likes</string>
    <string name="view_all1">View all</string>
    <string name="comment">comment</string>
    <string name="enter_description">Please Enter Description</string>
    <string name="your_story">Your Story</string>
    <string name="a_story">Story</string>
    <string name="fan_club">Fan Club</string>
    <string name="my_stories">My Stories</string>
    <string name="share_using">Share Using</string>
    <string name="_01_super_likes">01 Super Likes</string>
    <string name="_05_super_likes">05 Super Likes</string>
    <string name="_10_super_likes">10 Super Likes</string>
    <string name="_50_super_likes">50 Super Likes</string>
    <string name="_20_super_likes">20 Super Likes</string>
    <string name="_100_super_likes">100 Super Likes</string>
    <string name="_1000_super_likes">1000 Super Likes</string>
    <string name="_10000_super_likes">10000 Super Likes</string>
    <string name="super_likes">Super likes</string>
    <string name="save_changes">Save Changes</string>
    <string name="set_month">Set Month</string>
    <string name="apply_for_fan_club_account">Apply for Fan Club Account</string>
    <string name="apply">Apply</string>
    <string name="request_verification">Request Verification</string>
    <string name="upload_selfie_holding_photo_id">Upload Selfie Holding Photo ID</string>
    <string name="upload_photo_id">Upload Photo ID</string>
    <string name="i_don_t_like_it">Spam</string>
    <string name="nudity">Pornography</string>
    <string name="delete">Delete</string>
    <string name="view_profile">View Profile</string>
    <string name="purchase_more_superlikes">Purchase more superlikes</string>
    <string name="purchase">Purchase</string>
    <string name="choose_card">Choose Card</string>
    <string name="pay">Pay</string>
    <string name="saved_images_videos">Saved Images/Videos</string>
    <string name="create_plan">Create Subcription Plan</string>
    <string name="add_subscription_plan">Add Subscription Plan</string>
    <string name="set_superlikes">Set Superlikes</string>
    <string name="enter_valid_months">Please Enter Valid Months</string>
    <string name="enter_months">Please Enter Months</string>
    <string name="enter_superlikes">Please Enter Superlikes</string>
    <string name="months"> Months</string>
    <string name="manage_fan_membership">Manage FAN Membership</string>
    <string name="search">Search</string>
    <string name="my_purchased">My Puchased Subscription</string>
    <string name="my_fans">My Fans</string>
    <string name="follow_suggestion">Follow Suggestions</string>
    <string name="unlock_with">Unlock With</string>
    <string name="uplock_with_n">Unlock With \n</string>
    <string name="superlies"> Superlikes</string>
    <string name="logout">Logout</string>
    <string name="pp">Privacy Policy</string>
    <string name="about">About Us</string>
    <string name="video_compression_complete">Video Compression Completed</string>
    <string name="fan">Fan</string>
    <string name="all">All</string>
    <string name="notifications">Notifications</string>
    <string name="apply_for_verified_user">Apply For Verified User</string>
    <string name="open_fan_clucb">Open Fan Club</string>
    <string name="are_you_sure">Are you sure you want to create a Fan Club?</string>
    <string name="add">Add</string>
    <string name="enter_fan_club_description">Enter Fan club description</string>
    <string name="enable_disable_fan_club">Enable/Disable Fan Club</string>
    <string name="coins_received"></string>
    <string name="_1_superlikes_1">2 Superlikes : 1</string>
    <string name="total_earning">Total Earning: $</string>
    <string name="unsave">Unsave</string>
    <string name="bullying_or_harassment">Bullying or Harassment</string>
    <string name="private_information">Private Information</string>
    <string name="website">Website</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="dob">Dob</string>
    <string name="write_a_caption">Write a Caption...</string>
    <string name="public_post">Public Post</string>
    <string name="address">Address</string>
    <string name="see_more">See More</string>
    <string name="dot_see_more">.. See More</string>
    <string name="to_open_fan_club_please_verify_account">To open “Fan Club” please verify account.</string>
    <string name="pending">Pending Verification</string>
    <string name="help">Help</string>
    <string name="are_you_sure_you_want_to_gift"> Are you sure you want to gift </string>
    <string name="superlike_to_unlock_post">Superlikes to unlock post?</string>
    <string name="disable_enable">Disable/Enable</string>
    <string name="i_am_a_top_stanrz_of">I am a top stanrz of...</string>
    <string name="top_stanrz">Top 100 Stanrz</string>
    <string name="top_100">Top 100</string>
    <string name="all_time">All Time</string>
    <string name="daily">Daily</string>
    <string name="unblock">Unblock</string>
    <string name="security">Security</string>
    <string name="nsfw">NSFW</string>
    <string name="i_am_a_stanrz_of">is a Stanrz of...</string>
    <string name="daily_top_10_stanrz"> Top 10 Stanrz</string>
    <string name="hide_from_profile">Hide From Profile</string>
    <string name="show_from_profile">Show on Profile</string>
    <string name="save">Save</string>
    <string name="gift_super_likes">Gift Super Likes</string>
    <string name="confirm">Confirm</string>
    <string name="user_activity">"My Activity "</string>
    <string name="git_superlike">Gift Superlike</string>
    <string name="please_verify_account_to_open_fan_club">Please verify account to open Fan Club</string>
    <string name="verify_account"><u>Verify Account</u></string>
    <string name="request_is_pending">Pending verification</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="sent">We sent 6 digit code to your phone</string>
    <string name="messsages">Messages</string>
    <string name="create_monthly_subscription_plan">Create Monthly Subscription Plan</string>
    <string name="create_fan_plan">Create Fan Plan</string>
    <string name="tag_people">Tag People</string>
    <string name="invalid_url">Invalid url</string>
    <string name="monthly">Monthly</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="share">Share</string>
    <string name="google_sing_in_falied">Google sign in failed</string>
    <string name="enter_your_email_and_will_send_nyou_instructions_on_how_to_reset_it">Enter your email and will send\nyou instructions on how to reset it</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="your_name">Your name</string>
    <string name="user_name">User Name</string>
    <string name="your_user_name">Your user name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_password">Your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_confirm_password">Your confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_option">Select option</string>
    <string name="upload_image_from_camera">Upload image from camera</string>
    <string name="upload_video_from_camera">Upload video from camera</string>
    <string name="upload_image_video_from_galary">Upload image/video from gallery</string>
</resources>