<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddCard"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_13sdp"
                >

                <ImageView
                    android:id="@+id/img_header"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_back"
                    android:padding="@dimen/_2sdp"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"/>

                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semi_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_toRightOf="@id/img_header"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:text="@string/create_fan_plan"
                    android:textSize="@dimen/_16sdp" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                android:layout_marginTop="@dimen/_5sdp"
                />

            <EditText
                android:id="@+id/etMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/et_bg"
                android:padding="@dimen/_10sdp"
                android:hint="@string/set_month"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:layout_marginHorizontal="@dimen/_20sdp"
                />

            <EditText
                android:id="@+id/etRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/et_bg"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:inputType="number"
                android:hint="@string/set_superlikes"
                />

            <CheckBox
                android:id="@+id/checkBoxMonthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_monthly_subscription_plan"
                android:layout_margin="@dimen/_20sdp"
                />

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAllCaps="false"
            android:padding="@dimen/_10sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:text="@string/add_subscription_plan"
            android:layout_margin="@dimen/_15sdp"
            />
    </RelativeLayout>
</layout>